--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .icon-link-btn {
+		@apply flex gap-2 px-3 p-1 items-center rounded transition-colors hover:bg-blue-700 dark:hover:bg-sky-400;
+	}
+	.icon-link-btn--outline {
+		@apply border border-gray-100;
+	}
+	.icon-link-btn--active {
+		@apply bg-blue-700 dark:bg-sky-400;
+	}
+}
